--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "9               Ghastly Adamantite Protector   3.58  "
       ]
      },
-     "execution_count": 283,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "0            576"
       ]
      },
-     "execution_count": 284,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "0                    179  $3.050987179487176                 780      $2379.77"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,19 +398,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Male                    84.03\n",
-       "Female                  14.06\n",
-       "Other / Non-Disclosed    1.91\n",
+       "Male                     84.027778\n",
+       "Female                   14.062500\n",
+       "Other / Non-Disclosed     1.909722\n",
        "Name: Gender, dtype: float64"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "Name: Gender, dtype: int64"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -480,17 +480,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Male</th>\n",
-       "      <td>84.03</td>\n",
+       "      <td>84.027778</td>\n",
        "      <td>484</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Female</th>\n",
-       "      <td>14.06</td>\n",
+       "      <td>14.062500</td>\n",
        "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other / Non-Disclosed</th>\n",
-       "      <td>1.91</td>\n",
+       "      <td>1.909722</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -499,12 +499,12 @@
       ],
       "text/plain": [
        "                       Percentage of Players  Total Count\n",
-       "Male                                   84.03          484\n",
-       "Female                                 14.06           81\n",
-       "Other / Non-Disclosed                   1.91           11"
+       "Male                               84.027778          484\n",
+       "Female                             14.062500           81\n",
+       "Other / Non-Disclosed               1.909722           11"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -586,23 +586,23 @@
        "    <tr>\n",
        "      <th>Female</th>\n",
        "      <td>113</td>\n",
-       "      <td>3.20</td>\n",
+       "      <td>3.203009</td>\n",
        "      <td>361.94</td>\n",
-       "      <td>4.47</td>\n",
+       "      <td>4.468395</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Male</th>\n",
        "      <td>652</td>\n",
-       "      <td>3.02</td>\n",
-       "      <td>1,967.64</td>\n",
-       "      <td>4.07</td>\n",
+       "      <td>3.017853</td>\n",
+       "      <td>1967.64</td>\n",
+       "      <td>4.065372</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other / Non-Disclosed</th>\n",
        "      <td>15</td>\n",
-       "      <td>3.35</td>\n",
+       "      <td>3.346000</td>\n",
        "      <td>50.19</td>\n",
-       "      <td>4.56</td>\n",
+       "      <td>4.562727</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -611,18 +611,18 @@
       "text/plain": [
        "                       Purchase Count  Average Purchase Price  \\\n",
        "Gender                                                          \n",
-       "Female                            113                    3.20   \n",
-       "Male                              652                    3.02   \n",
-       "Other / Non-Disclosed              15                    3.35   \n",
+       "Female                            113                3.203009   \n",
+       "Male                              652                3.017853   \n",
+       "Other / Non-Disclosed              15                3.346000   \n",
        "\n",
        "                       Total Purchase Value  Avg Total Purchase Per Person  \n",
        "Gender                                                                      \n",
-       "Female                               361.94                           4.47  \n",
-       "Male                               1,967.64                           4.07  \n",
-       "Other / Non-Disclosed                 50.19                           4.56  "
+       "Female                               361.94                       4.468395  \n",
+       "Male                                1967.64                       4.065372  \n",
+       "Other / Non-Disclosed                 50.19                       4.562727  "
       ]
      },
-     "execution_count": 384,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,16 +676,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 573,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001AC8ACE7F70>\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -720,42 +713,42 @@
        "    <tr>\n",
        "      <th>&lt;10</th>\n",
        "      <td>17</td>\n",
-       "      <td>2.95</td>\n",
+       "      <td>2.951389</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10-14</th>\n",
        "      <td>22</td>\n",
-       "      <td>3.82</td>\n",
+       "      <td>3.819444</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15-19</th>\n",
        "      <td>107</td>\n",
-       "      <td>18.58</td>\n",
+       "      <td>18.576389</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20-24</th>\n",
        "      <td>258</td>\n",
-       "      <td>44.79</td>\n",
+       "      <td>44.791667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25-29</th>\n",
        "      <td>77</td>\n",
-       "      <td>13.37</td>\n",
+       "      <td>13.368056</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30-34</th>\n",
        "      <td>52</td>\n",
-       "      <td>9.03</td>\n",
+       "      <td>9.027778</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35-39</th>\n",
        "      <td>31</td>\n",
-       "      <td>5.38</td>\n",
+       "      <td>5.381944</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40+</th>\n",
        "      <td>12</td>\n",
-       "      <td>2.08</td>\n",
+       "      <td>2.083333</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -764,17 +757,17 @@
       "text/plain": [
        "         Total Count  Percentage of Players\n",
        "Age_Bin                                    \n",
-       "<10               17                   2.95\n",
-       "10-14             22                   3.82\n",
-       "15-19            107                  18.58\n",
-       "20-24            258                  44.79\n",
-       "25-29             77                  13.37\n",
-       "30-34             52                   9.03\n",
-       "35-39             31                   5.38\n",
-       "40+               12                   2.08"
+       "<10               17               2.951389\n",
+       "10-14             22               3.819444\n",
+       "15-19            107              18.576389\n",
+       "20-24            258              44.791667\n",
+       "25-29             77              13.368056\n",
+       "30-34             52               9.027778\n",
+       "35-39             31               5.381944\n",
+       "40+               12               2.083333"
       ]
      },
-     "execution_count": 573,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +777,7 @@
     "bins=[0, 9, 14, 19, 24, 29, 34, 39, 100]\n",
     "labels = [\"<10\",\"10-14\",\"15-19\",\"20-24\",\"25-29\",\"30-34\",\"35-39\",\"40+\"]\n",
     "grp_sn['Age_Bin'] = pd.cut(grp_sn['Age'],bins=bins,labels=labels,include_lowest=True)\n",
-    "ag_bin = grp_sn.groupby(\"Age_Bin\")`\n",
+    "ag_bin = grp_sn.groupby(\"Age_Bin\")\n",
     "unk2 = ag_bin[\"Age\"].count()\n",
     "unk3 = ag_bin[\"Age\"].count()/len(grp_sn[\"SN\"])*100\n",
     "\n",
@@ -822,33 +815,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 584,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Age_Bin1\n",
-      "<10      3\n",
-      "10-14    5\n",
-      "15-19    5\n",
-      "20-24    5\n",
-      "25-29    5\n",
-      "30-34    5\n",
-      "35-39    5\n",
-      "40+      6\n",
-      "Name: Age_Bin1, dtype: int64\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "      <th>Avg Total Purchase Per Person</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age_Range</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;10</th>\n",
+       "      <td>23</td>\n",
+       "      <td>3.353478</td>\n",
+       "      <td>77.13</td>\n",
+       "      <td>4.537059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10-14</th>\n",
+       "      <td>28</td>\n",
+       "      <td>2.956429</td>\n",
+       "      <td>82.78</td>\n",
+       "      <td>3.762727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15-19</th>\n",
+       "      <td>136</td>\n",
+       "      <td>3.035956</td>\n",
+       "      <td>412.89</td>\n",
+       "      <td>3.858785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20-24</th>\n",
+       "      <td>365</td>\n",
+       "      <td>3.052219</td>\n",
+       "      <td>1114.06</td>\n",
+       "      <td>4.318062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25-29</th>\n",
+       "      <td>101</td>\n",
+       "      <td>2.900990</td>\n",
+       "      <td>293.00</td>\n",
+       "      <td>3.805195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30-34</th>\n",
+       "      <td>73</td>\n",
+       "      <td>2.931507</td>\n",
+       "      <td>214.00</td>\n",
+       "      <td>4.115385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35-39</th>\n",
+       "      <td>41</td>\n",
+       "      <td>3.601707</td>\n",
+       "      <td>147.67</td>\n",
+       "      <td>4.763548</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40+</th>\n",
+       "      <td>13</td>\n",
+       "      <td>2.941538</td>\n",
+       "      <td>38.24</td>\n",
+       "      <td>3.186667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Purchase Count  Average Purchase Price  Total Purchase Value  \\\n",
+       "Age_Range                                                                 \n",
+       "<10                    23                3.353478                 77.13   \n",
+       "10-14                  28                2.956429                 82.78   \n",
+       "15-19                 136                3.035956                412.89   \n",
+       "20-24                 365                3.052219               1114.06   \n",
+       "25-29                 101                2.900990                293.00   \n",
+       "30-34                  73                2.931507                214.00   \n",
+       "35-39                  41                3.601707                147.67   \n",
+       "40+                    13                2.941538                 38.24   \n",
+       "\n",
+       "           Avg Total Purchase Per Person  \n",
+       "Age_Range                                 \n",
+       "<10                             4.537059  \n",
+       "10-14                           3.762727  \n",
+       "15-19                           3.858785  \n",
+       "20-24                           4.318062  \n",
+       "25-29                           3.805195  \n",
+       "30-34                           4.115385  \n",
+       "35-39                           4.763548  \n",
+       "40+                             3.186667  "
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "grp_sn = pd.DataFrame({'age_count':purchase_data.groupby(\"Age\").size()}).reset_index()\n",
+    "grp_sn1 = pd.DataFrame({'age_count':purchase_data.groupby([\"Purchase ID\",\"Age\",\"Price\",\"SN\"]).size()}).reset_index()\n",
     "bins=[0, 9, 14, 19, 24, 29, 34, 39, 100]\n",
     "labels = [\"<10\",\"10-14\",\"15-19\",\"20-24\",\"25-29\",\"30-34\",\"35-39\",\"40+\"]\n",
-    "grp_sn1['Age_Bin1'] = pd.cut(grp_sn[\"Age\"],bins=bins,labels=labels,include_lowest=True)\n",
-    "ag_bin1 = grp_sn1.groupby(\"Age_Bin1\")\n",
-    "print(ag_bin1['Age_Bin1'].count())"
+    "grp_sn1['Age_Range'] = pd.cut(grp_sn1[\"Age\"],bins=bins,labels=labels,include_lowest=True)\n",
+    "ag_bin1 = grp_sn1.groupby(\"Age_Range\")\n",
+    "pur1 = ag_bin1[\"Purchase ID\"].count()\n",
+    "pur2 = ag_bin1[\"Price\"].agg({np.mean})\n",
+    "pur3 = ag_bin1[\"Price\"].agg({np.sum})\n",
+    "pur4 = ag_bin1[\"Price\"].agg([np.sum]).astype(float)\n",
+    "pur5 = ag_bin1[\"SN\"].unique().agg([np.size]).astype(int)\n",
+    "pur6 = pur4['sum'].div(pur5['size'])\n",
+    "\n",
+    "fnl_df11 = pd.concat([pur1,pur2,pur3,pur6], axis=1)\n",
+    "fnl_df11 = fnl_df11.rename(columns={\"Purchase ID\":\"Purchase Count\",\"mean\":\"Average Purchase Price\",\n",
+    "                                  \"sum\":\"Total Purchase Value\",0:\"Avg Total Purchase Per Person\"})\n",
+    "fnl_df11"
    ]
   },
   {
