--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "9               Ghastly Adamantite Protector   3.58  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "0            576"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "0                    179  $3.050987179487176                 780      $2379.77"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "Name: Gender, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "Name: Gender, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
        "Other / Non-Disclosed               1.909722           11"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        "Other / Non-Disclosed                 50.19                       4.562727  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
        "40+               12               2.083333"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
        "40+                             3.186667  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,10 +990,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum    Adairialis76Adastirin33Aeda94Aela59Aelaria33Ae...\n",
+      "Name: SN, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "#grp_sn21 = pd.DataFrame({\"SN\":purchase_data[\"SN\"],\"SP_CNT1\":purchase_data.groupby(\"SN\").size(),\n",
+    "#                         \"Price\":purchase_data[\"Price\"]}).reset_index()\n",
+    "#grp_sn22['SPN_CNT1'] = pd.DataFrame({'SPN_CNT1':grp_sn21.groupby(\"SP_CNT1\").size()}).reset_index()\n",
+    "#print(grp_sn22)\n",
+    "#grp_sn22 = grp_sn21.sort_values(\"SP_CNT1\",ascending=False)\n",
+    "#print (grp_sn22.groupby(\"SN\"))\n",
+    "#df_sn1 = grp_sn22.groupby(\"SN\")\n",
+    "#print(df_sn1.count().sort_values(\"SN\", ascending=False))\n",
+    "#print (grp_sn21.sort_values(\"SP_CNT1\",ascending=False))\n",
+    "#print (grp_sn21.sort_values(\"SP_CNT1\",ascending=False).head(5)['Price'].agg(np.sum))\n",
+    "#print (grp_sn22.sort_values(\"SPN_CNT1\",ascending=False).value_counts().head(5))\n",
+    "#grp_sn21 = pd.DataFrame({'SP_CNT':purchase_data.groupby([\"SN\",\"Price\"]).size()}).reset_index()\n",
+    "#print(grp_sn21.sort_values(\"SN\",ascending=False).value_counts().head(5))\n",
+    "#print(grp_sn21['SN'].agg([np.mean]))\n",
+    "#print(ag_bin23)\n",
+    "#print(ag_bin23.head(5).sort_values(\"SN_RNG\",ascending=True))\n",
+    "#grp_sn21 = pd.DataFrame({\"SN\":purchase_data[\"SN\"],\"Price\":purchase_data[\"Price\"]}).reset_index()\n",
+    "#grp_sn22 = grp_sn21.groupby(\"SN\")\n",
+    "#print(grp_sn22.count().sort_values('index',ascending=False))\n",
+    "#print(grp_sn22['Price'].count().sort_values('index',ascending=False))\n",
+    "#print(grp_sn22['Price'].count().sort_values('index',ascending=False).agg({np.sum}))\n",
+    "#print(grp_sn21.sort_values(\"SN\",ascending=False).value_counts().head(5))\n",
+    "grp_sn21 = pd.DataFrame({'sn_pr' : purchase_data.groupby( [ \"SN\", \"Price\"] ).size()}).reset_index()\n",
+    "print(grp_sn21[\"SN\"].agg([np.sum]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1027,10 +1061,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "      <th>Item Price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <th>Final Critic</th>\n",
+       "      <td>13</td>\n",
+       "      <td>4.538462</td>\n",
+       "      <td>59.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
+       "      <td>12</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>50.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <th>Fiery Glass Crusader</th>\n",
+       "      <td>9</td>\n",
+       "      <td>4.555556</td>\n",
+       "      <td>41.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132</th>\n",
+       "      <th>Persuasion</th>\n",
+       "      <td>9</td>\n",
+       "      <td>3.111111</td>\n",
+       "      <td>28.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <th>Extraction, Quickblade Of Trembling Hands</th>\n",
+       "      <td>9</td>\n",
+       "      <td>3.444444</td>\n",
+       "      <td>31.77</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      Purchase Count  \\\n",
+       "Item ID Item Name                                                      \n",
+       "92      Final Critic                                              13   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm              12   \n",
+       "145     Fiery Glass Crusader                                       9   \n",
+       "132     Persuasion                                                 9   \n",
+       "108     Extraction, Quickblade Of Trembling Hands                  9   \n",
+       "\n",
+       "                                                      Total Purchase Value  \\\n",
+       "Item ID Item Name                                                            \n",
+       "92      Final Critic                                              4.538462   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm              4.166667   \n",
+       "145     Fiery Glass Crusader                                      4.555556   \n",
+       "132     Persuasion                                                3.111111   \n",
+       "108     Extraction, Quickblade Of Trembling Hands                 3.444444   \n",
+       "\n",
+       "                                                      Item Price  \n",
+       "Item ID Item Name                                                 \n",
+       "92      Final Critic                                       59.99  \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm       50.76  \n",
+       "145     Fiery Glass Crusader                               41.22  \n",
+       "132     Persuasion                                         28.99  \n",
+       "108     Extraction, Quickblade Of Trembling Hands          31.77  "
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "itm_df = pd.DataFrame({\"Item ID\":purchase_data[\"Item ID\"],\"Item Name\":purchase_data[\"Item Name\"],\n",
+    "                         \"Item Price\":purchase_data[\"Price\"]}).reset_index()\n",
+    "itm_grp_df = itm_df.groupby([\"Item ID\",\"Item Name\"])\n",
+    "itm_df1 = itm_grp_df[\"Item ID\"].count()\n",
+    "itm_df1_1 = pd.DataFrame(itm_df1)\n",
+    "itm_df2 = itm_grp_df[\"Item Price\"].agg([np.sum])\n",
+    "itm_df3 = itm_df2['sum'].astype(int)/itm_df1_1['Item ID'].astype(float)\n",
+    "itm_fnl_df= pd.concat([itm_df1,itm_df3,itm_df2], axis=1)\n",
+    "itm_fnl_df=itm_fnl_df.rename(columns={\"Item ID\":\"Purchase Count\",0:\"Total Purchase Value\",\"sum\":\"Item Price\"})\n",
+    "freedom_df = itm_fnl_df.sort_values(\"Purchase Count\",ascending=False)\n",
+    "freedom_df.head(5)"
+   ]
   },
   {
    "cell_type": "markdown",
