--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -990,43 +990,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sum    Adairialis76Adastirin33Aeda94Aela59Aelaria33Ae...\n",
-      "Name: SN, dtype: object\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Value</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SNVal</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Lisosia93</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3.792000</td>\n",
+       "      <td>18.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Idastidru52</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3.862500</td>\n",
+       "      <td>15.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chamjask73</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4.610000</td>\n",
+       "      <td>13.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iral74</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3.405000</td>\n",
+       "      <td>13.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iskadarya95</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4.366667</td>\n",
+       "      <td>13.10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Purchase Count  Average Purchase Value  Total Purchase Value\n",
+       "SNVal                                                                    \n",
+       "Lisosia93                 5                3.792000                 18.96\n",
+       "Idastidru52               4                3.862500                 15.45\n",
+       "Chamjask73                3                4.610000                 13.83\n",
+       "Iral74                    4                3.405000                 13.62\n",
+       "Iskadarya95               3                4.366667                 13.10"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#grp_sn21 = pd.DataFrame({\"SN\":purchase_data[\"SN\"],\"SP_CNT1\":purchase_data.groupby(\"SN\").size(),\n",
-    "#                         \"Price\":purchase_data[\"Price\"]}).reset_index()\n",
-    "#grp_sn22['SPN_CNT1'] = pd.DataFrame({'SPN_CNT1':grp_sn21.groupby(\"SP_CNT1\").size()}).reset_index()\n",
-    "#print(grp_sn22)\n",
-    "#grp_sn22 = grp_sn21.sort_values(\"SP_CNT1\",ascending=False)\n",
-    "#print (grp_sn22.groupby(\"SN\"))\n",
-    "#df_sn1 = grp_sn22.groupby(\"SN\")\n",
-    "#print(df_sn1.count().sort_values(\"SN\", ascending=False))\n",
-    "#print (grp_sn21.sort_values(\"SP_CNT1\",ascending=False))\n",
-    "#print (grp_sn21.sort_values(\"SP_CNT1\",ascending=False).head(5)['Price'].agg(np.sum))\n",
-    "#print (grp_sn22.sort_values(\"SPN_CNT1\",ascending=False).value_counts().head(5))\n",
-    "#grp_sn21 = pd.DataFrame({'SP_CNT':purchase_data.groupby([\"SN\",\"Price\"]).size()}).reset_index()\n",
-    "#print(grp_sn21.sort_values(\"SN\",ascending=False).value_counts().head(5))\n",
-    "#print(grp_sn21['SN'].agg([np.mean]))\n",
-    "#print(ag_bin23)\n",
-    "#print(ag_bin23.head(5).sort_values(\"SN_RNG\",ascending=True))\n",
-    "#grp_sn21 = pd.DataFrame({\"SN\":purchase_data[\"SN\"],\"Price\":purchase_data[\"Price\"]}).reset_index()\n",
-    "#grp_sn22 = grp_sn21.groupby(\"SN\")\n",
-    "#print(grp_sn22.count().sort_values('index',ascending=False))\n",
-    "#print(grp_sn22['Price'].count().sort_values('index',ascending=False))\n",
-    "#print(grp_sn22['Price'].count().sort_values('index',ascending=False).agg({np.sum}))\n",
-    "#print(grp_sn21.sort_values(\"SN\",ascending=False).value_counts().head(5))\n",
-    "grp_sn21 = pd.DataFrame({'sn_pr' : purchase_data.groupby( [ \"SN\", \"Price\"] ).size()}).reset_index()\n",
-    "print(grp_sn21[\"SN\"].agg([np.sum]))"
+    "prch_df = pd.DataFrame({\"SNVal\":purchase_data[\"SN\"],\"Price\":purchase_data[\"Price\"]}).reset_index()\n",
+    "prch_df_grp = prch_df.groupby(\"SNVal\")\n",
+    "prch_df1 = prch_df_grp[\"SNVal\"].count()\n",
+    "prch_df1_1 = pd.DataFrame(prch_df1)\n",
+    "prch_df2 = prch_df_grp[\"Price\"].agg([np.sum])\n",
+    "prch_df3 = prch_df2['sum'].astype(float)/prch_df1_1['SNVal'].astype(int)\n",
+    "prch_fnl_df= pd.concat([prch_df1,prch_df3,prch_df2], axis=1)\n",
+    "prch_fnl_df=prch_fnl_df.rename(columns={\"SNVal\":\"Purchase Count\",0:\"Average Purchase Value\",\"sum\":\"Total Purchase Value\"})\n",
+    "freedom_df1 = prch_fnl_df.sort_values(\"Total Purchase Value\",ascending=False).head(5)\n",
+    "freedom_df1.head()"
    ]
   },
   {
@@ -1061,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1087,8 +1146,8 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th>Purchase Count</th>\n",
-       "      <th>Total Purchase Value</th>\n",
        "      <th>Item Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Item ID</th>\n",
@@ -1147,24 +1206,24 @@
        "132     Persuasion                                                 9   \n",
        "108     Extraction, Quickblade Of Trembling Hands                  9   \n",
        "\n",
-       "                                                      Total Purchase Value  \\\n",
-       "Item ID Item Name                                                            \n",
-       "92      Final Critic                                              4.538462   \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm              4.166667   \n",
-       "145     Fiery Glass Crusader                                      4.555556   \n",
-       "132     Persuasion                                                3.111111   \n",
-       "108     Extraction, Quickblade Of Trembling Hands                 3.444444   \n",
+       "                                                      Item Price  \\\n",
+       "Item ID Item Name                                                  \n",
+       "92      Final Critic                                    4.538462   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm    4.166667   \n",
+       "145     Fiery Glass Crusader                            4.555556   \n",
+       "132     Persuasion                                      3.111111   \n",
+       "108     Extraction, Quickblade Of Trembling Hands       3.444444   \n",
        "\n",
-       "                                                      Item Price  \n",
-       "Item ID Item Name                                                 \n",
-       "92      Final Critic                                       59.99  \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm       50.76  \n",
-       "145     Fiery Glass Crusader                               41.22  \n",
-       "132     Persuasion                                         28.99  \n",
-       "108     Extraction, Quickblade Of Trembling Hands          31.77  "
+       "                                                      Total Purchase Value  \n",
+       "Item ID Item Name                                                           \n",
+       "92      Final Critic                                                 59.99  \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm                 50.76  \n",
+       "145     Fiery Glass Crusader                                         41.22  \n",
+       "132     Persuasion                                                   28.99  \n",
+       "108     Extraction, Quickblade Of Trembling Hands                    31.77  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,7 +1237,7 @@
     "itm_df2 = itm_grp_df[\"Item Price\"].agg([np.sum])\n",
     "itm_df3 = itm_df2['sum'].astype(int)/itm_df1_1['Item ID'].astype(float)\n",
     "itm_fnl_df= pd.concat([itm_df1,itm_df3,itm_df2], axis=1)\n",
-    "itm_fnl_df=itm_fnl_df.rename(columns={\"Item ID\":\"Purchase Count\",0:\"Total Purchase Value\",\"sum\":\"Item Price\"})\n",
+    "itm_fnl_df=itm_fnl_df.rename(columns={\"Item ID\":\"Purchase Count\",\"sum\":\"Total Purchase Value\",0:\"Item Price\"})\n",
     "freedom_df = itm_fnl_df.sort_values(\"Purchase Count\",ascending=False)\n",
     "freedom_df.head(5)"
    ]
@@ -1206,12 +1265,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Item Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <th>Final Critic</th>\n",
+       "      <td>13</td>\n",
+       "      <td>4.538462</td>\n",
+       "      <td>59.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
+       "      <td>12</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>50.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <th>Nirvana</th>\n",
+       "      <td>9</td>\n",
+       "      <td>4.888889</td>\n",
+       "      <td>44.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <th>Fiery Glass Crusader</th>\n",
+       "      <td>9</td>\n",
+       "      <td>4.555556</td>\n",
+       "      <td>41.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <th>Singed Scalpel</th>\n",
+       "      <td>8</td>\n",
+       "      <td>4.250000</td>\n",
+       "      <td>34.80</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      Purchase Count  \\\n",
+       "Item ID Item Name                                                      \n",
+       "92      Final Critic                                              13   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm              12   \n",
+       "82      Nirvana                                                    9   \n",
+       "145     Fiery Glass Crusader                                       9   \n",
+       "103     Singed Scalpel                                             8   \n",
+       "\n",
+       "                                                      Item Price  \\\n",
+       "Item ID Item Name                                                  \n",
+       "92      Final Critic                                    4.538462   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm    4.166667   \n",
+       "82      Nirvana                                         4.888889   \n",
+       "145     Fiery Glass Crusader                            4.555556   \n",
+       "103     Singed Scalpel                                  4.250000   \n",
+       "\n",
+       "                                                      Total Purchase Value  \n",
+       "Item ID Item Name                                                           \n",
+       "92      Final Critic                                                 59.99  \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm                 50.76  \n",
+       "82      Nirvana                                                      44.10  \n",
+       "145     Fiery Glass Crusader                                         41.22  \n",
+       "103     Singed Scalpel                                               34.80  "
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "freedom_df = itm_fnl_df.sort_values(\"Total Purchase Value\",ascending=False)\n",
+    "freedom_df.head(5)"
+   ]
   }
  ],
  "metadata": {
